frontend.log
nohup: ignoring input

> vite_react_shadcn_ts@0.0.0 dev
> vite

(node:48322) Warning: To load an ES module, set "type": "module" in the package.json or use the .mjs extension.
(Use `node --trace-warnings ...` to show where the warning was created)
/var/www/html/report_logger/node_modules/.bin/vite:2
import { performance } from 'node:perf_hooks'
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at internalCompileFunction (node:internal/vm:76:18)
    at wrapSafe (node:internal/modules/cjs/loader:1283:20)
    at Module._compile (node:internal/modules/cjs/loader:1328:27)
    at Modul4:37:13 AM [vite] hmr update /src/components/AddReportForm.tsx, /src/index.css
4:37:18 AM [vite] hmr update /src/components/AddReportForm.tsx, /src/index.css
4:38:07 AM [vite] hmr update /src/components/AddReportForm.tsx, /src/index.css
4:39:41 AM [vite] hmr update /src/components/AddReportForm.tsx, /src/index.css
4:43:35 AM [vite] hmr update /src/components/AddReportForm.tsx, /src/index.css
4:43:36 AM [vite] hmr update /src/components/AddReportForm.tsx, /src/index.css
4:43:44 AM [vite] hmr update /src/components/AddReportForm.tsx, /src/index.css
4:43:56 AM [vite] hmr update /src/components/AddReportForm.tsx, /src/index.css
4:43:57 AM [vite] hmr update /src/components/AddReportForm.tsx, /src/index.css
4:44:34 AM [vite] hmr update /src/components/AddReportForm.tsx, /src/index.css
4:44:36 AM [vite] hmr update /src/components/AddReportForm.tsx, /src/index.css
